--- a/style/index.css
+++ b/style/index.css
@@ -4,7 +4,8 @@
  }
 
 .dlw-Table-experiments {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-family: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Helvetica Neue", "Icons16", sans-serif;
+    font-size: 12px;
     width: 100%;
     background-color: #ffffff;
     margin-top: 5px;
@@ -20,16 +21,20 @@
     margin-right: 5px;
 }
 
-.dlw-Table-experiments tr:hover:nth-child(even) {
+.dlw-Table-experiments tr: {
+    background-color: #f7f7f7;
+}
+
+.dlw-Table-experiments tr:hover {
     background-color: #ddd;
 }
 
-.dlw-Table-experiments tr:hover:nth-child(odd) {
-    background-color: #ddd;
-}
-
-.dlw-Table-experiments tr:nth-child(even) {
+.dlw-Table-experiments tr:nth-child(even):not(.dlw-Table-experiments-completed) {
     background-color: #f2f2f2;
+}
+
+tr.dlw-Table-experiments-completed {
+    background-color: #dee4e0;
 }
 
 .dlw-Table-experiments td {
@@ -39,10 +44,13 @@
 
 .dlw-Table-experiments thead {
     color: #495057;
-
     background-color: #e9ecef;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.dlw-Table-experiments-header td {
+    font-weight: bold;
 }
 
 .dlw-notebookExperimentWidget {
@@ -55,8 +63,4 @@
 
 .p-Widget a {
     color: #1970b7;
-}
-
-.dlw-Table-experiments-header td {
-    font-weight: bold;
 }
